# lms

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CHANGES  CMakeData.txt  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  FORK.md  README.md  README.txt  README.txt~  conanfile.py  framework.xsd  lms-profiler.py  lms_package.json  preprocess.xsl  validate-xml.sh
cmake/: TestCpp11.cmake
configs/: test_square_numbers.xml
doku/: README.md  (+2 more)
lms/: .gitignore  .gitignore~  CMakeData.txt  CMakeLists.txt  README.txt  README.txt~  fetch_repos_template.sh  pull_repos_template.sh  update_configs_template.sh
lms/.creator/default/: CMakeLists.txt
lms/.creator/default/include/: default.h
lms/.creator/default/src/: default.cpp  interface.cpp
lms/configs/: README.md  framework_conf.xml  framwork_conf.xml
lms/core/: CMakeLists.txt  README.txt  copyMe.txt
lms/core/configfile/: configfile.cpp
lms/core/include/core/: argumentparser.h  configfile.h  configurationloader.h  configurationmanager.h  datamanager.h  executionmanager.h  framework.h  handle.h  lms_exports.h  loader.h  logger.h  module.h  shared_base.h  signalhandler.h
lms/core/include/core/extra/: colors.h  string.h  type.h
lms/core/include/core/logging/: child_logger.h  log_level.h  log_message.h  root_logger.h
lms/core/include/core/type/: dynamic_image.h  module_config.h  static_image.h
lms/core/include/lms/: argumenthandler.h  clock.h  configurationloader.h  datamanager.h  executionmanager.h  framework.h  loader.h  logger.h  messaging.h  module.h  serializable.h  shared_interface.h  signalhandler.h
lms/core/include/lms/extra/: colors.h  file_monitor.h  time.h  type.h
lms/core/include/lms/logging/: child_logger.h  console_sink.h  logger.h  logging_filter.h  prefix_and_level_filter.h  root_logger.h
lms/core/include/lms/type/: dynamic_image.h  module_config.h
lms/core/main/: argumenthandler.cpp  argumentparser.cpp  backtrace_formatter.cpp  backtrace_formatter.h  backtrace_formatter_unix.cpp  backtrace_formatter_win.cpp  clock.cpp  configurationloader.cpp  configurationmanager.cpp  datamanager.cpp  executionmanager.cpp  framework.cpp  framework_unix.cpp  framework_win.cpp  handle.cpp  loader.cpp  loader_unix.cpp  loader_win.cpp  logger.cpp  main.cpp  messaging.cpp  module.cpp  shared_base.cpp  shared_base.h  signalhandler.cpp  signalhandler_unix.cpp  signalhandler_win.cpp  visualizer.cpp
lms/core/main/extra/: backtrace_formatter.h  backtrace_formatter_unix.cpp  backtrace_formatter_win.cpp  file_monitor.cpp  file_monitor_unix.cpp  string.cpp  time.cpp  type.cpp
lms/core/main/logging/: child_logger.cpp  console_sink.cpp  log_level.cpp  log_message.cpp  logger.cpp  prefix_and_level_filter.cpp  root_logger.cpp
lms/core/main/type/: dynamic_image.cpp  module_config.cpp  static_image.cpp
lms/core/xml/pugixml-1.5/: LICENSE  readme.txt
lms/core/xml/pugixml-1.5/src/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
lms/include/lms/: any.h  argumenthandler.h  buffered_datamanager.h  clock.h  config.h  config_observer.h  data_channel.h  data_channel_internal.h  datamanager.h  definitions.h.in  deprecated.h  endian.h  execution_type.h  executionmanager.h  framework.h  inheritance.h  interface.h  lms_exports.h  loader.h  logger.h  messaging.h  module.h  module_config.h  module_wrapper.h  profiler.h  runtime.h  serializable.h  service.h  service_handle.h  service_wrapper.h  signalhandler.h  time.h  type_result.h  unit.h  xml_parser.h
lms/include/lms/extra/: backtrace_formatter.h  colors.h  dot_exporter.h  file_monitor.h  math.h  os.h  string.h  time.h  type.h
lms/include/lms/internal/: argumenthandler.h  backtrace_formatter.h  clock.h  colors.h  dag.h  data_channel_internal.h  datamanager.h  debug_server.h  executionmanager.h  file_monitor.h  framework.h  loader.h  module_wrapper.h  os.h  profiler.h  service_wrapper.h  signalhandler.h  string.h  watch_dog.h  wrapper.h  xml_parser.h
lms/include/lms/logging/: child_logger.h  console_sink.h  context.h  event.h  file_sink.h  filter.h  log_level.h  log_message.h  logger.h  logging_filter.h  multi_sink.h  prefix_and_level_filter.h  root_logger.h  sink.h  threshold_filter.h
lms/include/lms/type/: framework_info.h  module_config.h
lms/main/: argumenthandler.cpp  buffered_datamanager.cpp  clock.cpp  config.cpp  config_observer.cpp  datamanager.cpp  endian.cpp  execution_type.cpp  executionmanager.cpp  framework.cpp  framework_unix.cpp  framework_win.cpp  loader.cpp  loader_unix.cpp  loader_win.cpp  main.cpp  messaging.cpp  module.cpp  module_config.cpp  module_wrapper.cpp  profiler.cpp  runtime.cpp  service.cpp  service_handle.cpp  service_wrapper.cpp  signalhandler.cpp  signalhandler_unix.cpp  signalhandler_win.cpp  time.cpp  unit.cpp  xml_parser.cpp
lms/main/extra/: backtrace_formatter_unix.cpp  backtrace_formatter_win.cpp  dot_exporter.cpp  file_monitor_unix.cpp  file_monitor_win.cpp  os.cpp  string.cpp  time.cpp  type.cpp
lms/main/internal/: argumenthandler.cpp  backtrace_formatter_unix.cpp  backtrace_formatter_win.cpp  clock.cpp  datamanager.cpp  debug_server.cpp  dot_exporter.cpp  executionmanager.cpp  file_monitor.cpp  file_monitor_unix.cpp  framework.cpp  framework_unix.cpp  framework_win.cpp  loader.cpp  module_wrapper.cpp  os.cpp  profiler.cpp  runtime.cpp  service_wrapper.cpp  string.cpp  watch_dog.cpp  xml_parser.cpp
lms/main/logging/: child_logger.cpp  console_sink.cpp  context.cpp  debug_server_sink.cpp  level.cpp  log_level.cpp  log_message.cpp  logger.cpp  multi_sink.cpp  root_logger.cpp  threshold_filter.cpp
lms/main/type/: framework_info.cpp  module_config.cpp
lms/test/: CMakeLists.txt  buffered_datamanager.cpp  config.cpp  endian.cpp  inheritance.cpp  module_config.cpp  xml_parser.cpp
lms/test/extra/: string.cpp  time.cpp
lms/test/internal/: dag.cpp  xml_parser.cpp
lms/test/type/: module_config.cpp
lms/xml/pugixml-1.5/: readme.txt
test/: CMakeLists.txt  config.cpp  datamanager.cpp  inheritance.cpp
test/extra/: string.cpp
test/internal/: dag.cpp  module_channel_graph.cpp  xml_parser.cpp
test/logging/: threshold_filter.cpp
(+152 files in other folders)
